--- a/app/views/site_page/dashboard_v2.html.erb
+++ b/app/views/site_page/dashboard_v2.html.erb
@@ -16,7 +16,7 @@
     widget: @site_page.dashboard_setting.widget_id,
     topContent: @site_page.dashboard_setting.content_top,
     bottomContent: @site_page.dashboard_setting.content_bottom,
-    columns: @site_page.dashboard_setting.columns
+    hiddenFields: @site_page.dashboard_setting.columns.blank? ? [] : @site_page.dashboard_setting.columns.split(',')
   }) %>
 </div>
 
