--- a/app/views/management/page_steps/type.html.erb
+++ b/app/views/management/page_steps/type.html.erb
@@ -74,6 +74,14 @@
             <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::MAP}, class: 'c-button'  %>
           </div>
         </div>
+
+        <div class="card -footer-at-bottom">
+          <h3 class="title">Group</h3>
+          <p class="description">A placeholder to organize pages</p>
+          <div class="footer">
+            <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::GROUP}, class: 'c-button'  %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
