--- a/app/views/site_page/feedback.html.erb
+++ b/app/views/site_page/feedback.html.erb
@@ -1,8 +1,19 @@
-<%= form_tag 'send-feedback', method: :post do %>
-  <%= text_field_tag 'user_name', nil, placeholder: 'Your name' %>
-  <%= text_field_tag 'user_email', nil, placeholder: 'Your email' %>
-  <%= text_field_tag 'subject', nil, placeholder: 'Subject' %>
-  <%= text_area_tag 'message', nil, placeholder: 'Type your message...' %>
-  <%= submit_tag 'Send Feedback' %>
-  <%= hidden_field_tag 'to', @contact_email %>
-<% end %>
+<%= javascript_pack_tag 'application' %>
+
+<%= react_component('Cover', {
+  title:  'Contact us',
+  subtitle: @site_page.site.name,
+  images: @page_cover,
+  size: 'small',
+  template: @site_page.site.site_template.name
+} ) %>
+
+<%= react_component('public/ContactForm', {
+  site: @site_page.site,
+  email: @contact_email,
+}) %>
+
+<script type="text/javascript">
+  window.route = 'ContactForm';
+</script>
+
