Display the pages not on the menu as grey

--- a/app/assets/stylesheets/components/management/c-tree-structure.scss
+++ b/app/assets/stylesheets/components/management/c-tree-structure.scss
@@ -83,6 +83,10 @@
       color: $color-3;
     }
 
+    &.-detached {
+      background-color: rgba($color-4, .1);
+    }
+
     &.-disabled {
       opacity: .5;
 
