Wording change for the "Position" step

--- a/app/views/management/page_steps/position.html.erb
+++ b/app/views/management/page_steps/position.html.erb
@@ -3,7 +3,7 @@
     <div class="wrapper">
       <div class="description">
         <h1>Choose the position</h1>
-        <p>Drag the green box to the place you want your new page to be</p>
+        <p>Drag the green box to the place you want your page to be</p>
       </div>
     </div>
   </div>
