Fixed feedback form

--- a/app/views/site_page/feedback.html.erb
+++ b/app/views/site_page/feedback.html.erb
@@ -17,6 +17,7 @@
   siteTemplateName: @site_page.site.site_template.name,
   siteSettings: @site_page.site.site_settings,
   email: @contact_email,
+  authenticityToken: @authenticity_token
 }) %>
 
 <script type="text/javascript">
