Add the header back to the map report

--- a/app/assets/stylesheets/front/_base-theme-carpe.scss
+++ b/app/assets/stylesheets/front/_base-theme-carpe.scss
@@ -33,6 +33,12 @@ body {
       position: static;
     }
   }
+
+  &.-map-report {
+    .c-header {
+      margin-bottom: 50px;
+    }
+  }
 }
 
 ul {
