--- a/app/views/site_page/map_report.html.erb
+++ b/app/views/site_page/map_report.html.erb
@@ -1,5 +1,5 @@
 <% content_for :body_class do %>
-  class="tundra" data-turbolinks="false"
+  class="tundra -wide -map-report" data-turbolinks="false"
 <% end %>
 
 <div class="report inner">
