--- a/app/assets/stylesheets/front/_base-theme-lsa.scss
+++ b/app/assets/stylesheets/front/_base-theme-lsa.scss
@@ -30,6 +30,12 @@ body {
   &.-wide {
     max-width: none;
   }
+
+  &.-map-report {
+    .c-header {
+      margin-bottom: 50px;
+    }
+  }
 }
 
 ul {
