Remove pointer cursor from groups in the menu

--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -411,6 +411,10 @@
             position: relative;
             align-items: center;
 
+            &.-group {
+              cursor: default;
+            }
+
             ul {
               position: absolute;
               right: 0;
