--- a/app/assets/stylesheets/components/shared/c-inputs-container.scss
+++ b/app/assets/stylesheets/components/shared/c-inputs-container.scss
@@ -7,6 +7,17 @@
     max-width: 880px;
   }
 
+  &.-submitted > .container {
+    > input,
+    > textarea,
+    > select {
+      &:invalid {
+        box-shadow: none;
+        border-bottom: 2px solid $color-12;
+      }
+    }
+  }
+
   > .container {
     padding: 25px 35px;
     border-top: 1px solid;
