Fix style issue with homepage of India template

--- a/app/assets/stylesheets/front/_base-theme-ind.scss
+++ b/app/assets/stylesheets/front/_base-theme-ind.scss
@@ -378,9 +378,12 @@ body {
 }
 
 .fa-page{
-  min-height: calc(70vh - 10px);
   padding: 0 0 130px !important;
   position: relative !important;
+
+  &:not(.-homepage) {
+    min-height: calc(70vh - 10px);
+  }
 
   @media #{$mq-smartphone}{
     padding: 0 0 130px !important;
