Image assets loaded over https to avoid insecure page content warnings from browsers.

--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -48,7 +48,7 @@
 
   <% load_alternate_logo = (@site_page.site_template.name == 'INDIA' and @site_page.content_type != ContentType::HOMEPAGE) %>
   <% if load_alternate_logo %>
-    <% @image_url = "http://wri-sites.s3.amazonaws.com/ifmt/NationalAtlasPartnerLogo/Atlas/WRI-Atlas-logo_unit.png" %>
+    <% @image_url = "https://wri-sites.s3.amazonaws.com/ifmt/NationalAtlasPartnerLogo/Atlas/WRI-Atlas-logo_unit.png" %>
   <% end %>
 
   <div class="mobile-menu wrapper">
