In India template, only zoom in/zoom out tools are displayed in map page.

--- a/app/assets/stylesheets/front/_base-theme-ind.scss
+++ b/app/assets/stylesheets/front/_base-theme-ind.scss
@@ -1118,6 +1118,21 @@ form{
   display: none !important;
  }
 
+.control-panel__share-map{
+  display: none !important;
+}
+
+.control-panel__locate-me{
+  display: none !important;
+}
+
+.control-panel__toggle-panels{
+  display: none !important;
+}
+
+.control-panel__reset{
+  display: none !important;
+}
 
 .atlas_wrapper{
 
