Accordion widget added for How to guide & Resources pages.

--- a/app/assets/stylesheets/front/_settings-theme-ind.scss
+++ b/app/assets/stylesheets/front/_settings-theme-ind.scss
@@ -22,7 +22,7 @@
 }
 
 // Font families
-$font-family-1: 'Acumin Pro', sans-serif;
+$font-family-1: 'Georgia', sans-serif;
 $font-family-2: 'Acumin Pro', sans-serif;
 
 // Font sizes
