Removed Dashboard from the backend

--- a/app/views/management/page_steps/type.html.erb
+++ b/app/views/management/page_steps/type.html.erb
@@ -28,8 +28,8 @@
         </div>
 
         <div class="card -footer-at-bottom">
-          <h3 class="title">Dashboard V2</h3>
-          <p class="description">New FA dashboard</p>
+          <h3 class="title">Dashboard</h3>
+          <p class="description">FA dashboard</p>
           <div class="footer">
             <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::DASHBOARD_V2}, class: 'c-button'  %>
           </div>
