--- a/app/views/management/page_steps/type.html.erb
+++ b/app/views/management/page_steps/type.html.erb
@@ -20,7 +20,7 @@
     <div class="wrapper">
       <div class="c-card-list">
         <div class="card -footer-at-bottom">
-          <h3 class="title">(V2) Open Content page</h3>
+          <h3 class="title">Open Content page</h3>
           <p class="description">Create a new page with any type of content you want in.</p>
           <div class="footer">
             <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::OPEN_CONTENT_V2}, class: 'c-button'  %>
