--- a/app/assets/stylesheets/components/shared/c-inputs-container.scss
+++ b/app/assets/stylesheets/components/shared/c-inputs-container.scss
@@ -18,6 +18,11 @@
     }
   }
 
+  // This occurs when .c-inputs-container is a fieldset element
+  > legend {
+    border: 0;
+  }
+
   > .container {
     padding: 25px 35px;
     border-top: 1px solid;
