--- a/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
@@ -3,7 +3,8 @@
   // screen has a small height
   padding-bottom: 75px;
 
-  &.-title {
+  &.-title,
+  &.-metadata {
     display: flex;
     align-items: center;
     min-height: calc(100vh - 300px);
@@ -13,6 +14,14 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+    }
+  }
+
+  &.-metadata {
+    .c-inputs-container > .container {
+      > textarea {
+        min-height: 120px;
+      }
     }
   }
 
