--- a/app/views/management/dataset_steps/metadata.html.erb
+++ b/app/views/management/dataset_steps/metadata.html.erb
@@ -13,7 +13,21 @@
 <%= Gon::Base.render_data %>
 
 <%= form_for @dataset, url: wizard_path, method: :put do |f| %>
-  <%= react_component('ManagementDatasetMetadata', {}) %>
+  <%= react_component('ManagementDatasetMetadata', {
+    languages: { en: 'English', fr: 'French' },
+    defaultLanguage: 'fr',
+    metadata: {
+      en: {
+        description: 'I\'m a description',
+        citation: 'I\'m a citation',
+        source: 'I\'m a source'
+      },
+      fr: {
+        description: 'Je suis une description',
+        citation: 'Je suis une citation'
+      }
+    }
+  }) %>
 
   <%= render partial: 'management/datasets/metadata_form', locals: {f: f} %>
   <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: management_site_datasets_path(@site.slug)} %>
