Update the description of the form

--- a/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
@@ -18,6 +18,13 @@
   }
 
   &.-metadata {
+    padding-top: 0;
+
+    .intro {
+      max-width: 570px;
+      margin: 40px auto;
+    }
+
     .c-inputs-container > .container {
       > textarea {
         min-height: 120px;
