--- a/app/views/management/dataset_steps/options.html.erb
+++ b/app/views/management/dataset_steps/options.html.erb
@@ -1,7 +1,7 @@
 <div class="c-extended-header">
   <div class="wrapper">
     <div class="description">
-      <h1>Options</h1>
+      <h1>Aliases</h1>
       <p></p>
     </div>
   </div>
