Add a description to the page

--- a/app/views/management/dataset_steps/options.html.erb
+++ b/app/views/management/dataset_steps/options.html.erb
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div class="description">
       <h1>Aliases</h1>
-      <p></p>
+      <p>Assign aliases and descriptions to the columns of your dataset to help users better understand them in the dashboards and widgets.</p>
     </div>
   </div>
 </div>
