--- a/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
@@ -4,7 +4,7 @@
   padding-bottom: 75px;
 
   &.-title,
-  &.-metadata {
+  &.-aliases {
     display: flex;
     align-items: center;
     min-height: calc(100vh - 300px);
