Update the layout and styles of the form

--- a/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
@@ -27,8 +27,21 @@
     }
 
     .c-inputs-container > .container {
-      > textarea {
-        min-height: 120px;
+      input:disabled {
+        // Since this input has a background, a padding make it appear nicer
+        padding: 2px 3px;
+      }
+
+      textarea {
+        min-height: 80px;
+      }
+
+      .row {
+        border-bottom: 1px solid $color-13;
+
+        &:last-of-type {
+          border-bottom: none;
+        }
       }
     }
   }
